settings: Change display-settings to preferences.

--- a/web/templates/settings_overlay.hbs
+++ b/web/templates/settings_overlay.hbs
@@ -20,9 +20,9 @@
                         <i class="icon fa fa-lock" aria-hidden="true"></i>
                         <div class="text">{{t "Account & privacy" }}</div>
                     </li>
-                    <li tabindex="0" data-section="display-settings">
+                    <li tabindex="0" data-section="preferences">
                         <i class="icon fa fa-clock-o" aria-hidden="true"></i>
-                        <div class="text">{{t "Display settings" }}</div>
+                        <div class="text">{{t "Preferences" }}</div>
                     </li>
                     <li tabindex="0" data-section="notifications">
                         <i class="icon fa fa-exclamation-triangle" aria-hidden="true"></i>
