--- a/web/templates/unread_banner/mark_as_read_disabled_banner.hbs
+++ b/web/templates/unread_banner/mark_as_read_disabled_banner.hbs
@@ -2,7 +2,7 @@
     <p id="mark_as_read_turned_off_content" class="banner_content">
         {{#tr}}
             Messages will not be automatically marked as read. <z-link>Change setting</z-link>
-            {{#*inline "z-link"}}<a href='/#settings/display-settings'>{{> @partial-block}}</a>{{/inline}}
+            {{#*inline "z-link"}}<a href='/#settings/preferences'>{{> @partial-block}}</a>{{/inline}}
         {{/tr}}
     </p>
     <button id="mark_view_read" class="main-view-banner-action-button">
